RESOLVED FIXED188272
[LFC] Display:Box::rectWithMargin()'s width and height don't include margin left/top.
https://bugs.webkit.org/show_bug.cgi?id=188272
Summary [LFC] Display:Box::rectWithMargin()'s width and height don't include margin l...
alan
Reported 2018-08-02 12:43:18 PDT
ssia
Attachments
Patch (1.78 KB, patch)
2018-08-02 12:45 PDT, alan
koivisto: review+
alan
Comment 1 2018-08-02 12:45:04 PDT
alan
Comment 2 2018-08-02 12:48:02 PDT
Radar WebKit Bug Importer
Comment 3 2018-08-02 12:48:21 PDT
Note You need to log in before you can comment on or make changes to this bug.