[LFC] Display:Box::rectWithMargin()'s width and height don't include margin left/top. https://bugs.webkit.org/show_bug.cgi?id=188272

Reviewed by Antti Koivisto.

* layout/displaytree/DisplayBox.h:
(WebCore::Display::Box::rectWithMargin const):

Canonical link: https://commits.webkit.org/203376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234509 268f45cc-cd09-0410-ab3c-d52691b4dbfc